--- a/theme.toml
+++ b/theme.toml
@@ -1,4 +1,4 @@
-name = "Piko"
+name = "test"
 license = "MIT"
 licenselink = "https://github.com/heksagonnet/piko/blob/master/LICENSE"
 description = "Piko is a minimalistic and fast theme powered by Hugo for building a blog or portfolio."
